--- a/src/components/sheets-tab/sheets-tab.module.scss
+++ b/src/components/sheets-tab/sheets-tab.module.scss
@@ -7,9 +7,15 @@
   flex-direction: row;
   display: flex;
   box-sizing: border-box;
-  padding-bottom: 17px;
+  /* Reserve space; prevent overlaying the canvas area */
+  flex: 0 0 44px;
+  height: 44px;
+  padding-bottom: 8px;
   padding-left: 12px;
   background-color: #f2f4f7;
+  border-top: 1px solid #e2e6ed;
+  position: relative;
+  z-index: 0;
 }
 .pre-btns {
   width: 30px;
